// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`image without options 2 images 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      data-pristine=\\"test1.png\\"
      sizes=\\"100vw\\"
      srcset=\\"test1-320.png 320w, test1-350.png 350w\\"
      src=\\"test1-350.png\\"
      width=\\"350\\"
    /><img
      data-pristine=\\"test2.png\\"
      sizes=\\"100vw\\"
      srcset=\\"test2-320.png 320w, test2-400.png 400w\\"
      src=\\"test2-400.png\\"
      width=\\"400\\"
    />
  </body>
</html>
"
`;

exports[`image without options simple image 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <p>
      content before
      <img
        data-pristine=\\"test.png\\"
        sizes=\\"100vw\\"
        srcset=\\"
          test-320.png   320w,
          test-560.png   560w,
          test-800.png   800w,
          test-1040.png 1040w,
          test-1280.png 1280w
        \\"
        src=\\"test-640.png\\"
      />
      content after
    </p>
  </body>
</html>
"
`;

exports[`image without options simple image in subfolder 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <p>
      content before
      <img
        data-pristine=\\"folder/test.png\\"
        sizes=\\"100vw\\"
        srcset=\\"
          folder/test-320.png   320w,
          folder/test-560.png   560w,
          folder/test-800.png   800w,
          folder/test-1040.png 1040w,
          folder/test-1280.png 1280w
        \\"
        src=\\"folder/test-640.png\\"
      />
      content after
    </p>
  </body>
</html>
"
`;

exports[`image without options simple image with absolute URL 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <p>
      content before
      <img
        data-pristine=\\"https://example.com/folder/test.png\\"
        sizes=\\"100vw\\"
        srcset=\\"
          https://example.com/folder/test-320.png   320w,
          https://example.com/folder/test-560.png   560w,
          https://example.com/folder/test-800.png   800w,
          https://example.com/folder/test-1040.png 1040w,
          https://example.com/folder/test-1280.png 1280w
        \\"
        src=\\"https://example.com/folder/test-640.png\\"
      />
      content after
    </p>
  </body>
</html>
"
`;

exports[`image without options width attribute inferior to the fallback 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      data-pristine=\\"test.png\\"
      sizes=\\"100vw\\"
      srcset=\\"test-320.png 320w, test-543.png 543w\\"
      src=\\"test-543.png\\"
      width=\\"543\\"
    />
  </body>
</html>
"
`;

exports[`image without options width attribute inferior to the minWidth 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      data-pristine=\\"test.png\\"
      sizes=\\"100vw\\"
      srcset=\\"test-200.png 200w\\"
      src=\\"test-200.png\\"
      width=\\"200\\"
    />
  </body>
</html>
"
`;

exports[`image without options width attribute superior to the fallback 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      data-pristine=\\"test.png\\"
      sizes=\\"100vw\\"
      srcset=\\"test-320.png 320w, test-560.png 560w, test-789.png 789w\\"
      src=\\"test-640.png\\"
      width=\\"789\\"
    />
  </body>
</html>
"
`;
